--- a/03_basic_programming.ipynb
+++ b/03_basic_programming.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,20 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3496"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Integers\n",
     "-3496"
@@ -82,20 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.00663"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Float\n",
     "-6.63e-3"
@@ -103,20 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-1+3.4j)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Complex\n",
     "-1. + 3.4j"
@@ -129,7 +96,92 @@
     "Note that:\n",
     "\n",
     "* Type of variable is set by the value assigned to it\n",
-    "* Storage size used by these variables types are different. "
+    "* Storage size used by these variables types are different. \n",
+    "\n",
+    "\n",
+    "Another variable type:\n",
+    "\n",
+    "* String: \n",
+    "\n",
+    "x = \"This is a string\"\n",
+    "Strings are a set of characters. Even numbers can be a string. Eg:- x = \"1.453\". In this example, x does not represent a number, but a set of symbols  which are numbers and a decimal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output and Input Statement\n",
+    "\n",
+    "Out put statement is `print` and input statement is `input`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x = 1\n",
+    "print x\n",
+    "# If you are using Python 3, print is a function and hence so you should write print(x). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y =5.6\n",
+    "print x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thevalueof = \"The value of\"\n",
+    "print thevalueof, \"x is\", x, \"and\", thevalueof,\"y is\", y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#input statement\n",
+    "x = input(\"Enter the value of x:\")\n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = input(\"Enter the value of x:\")\n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = input(\"Enter the value of x :\")\n",
+    "print \"The value of temp is :\", temp\n",
+    "x=float(temp)\n",
+    "print \"The value of x is :\", x\n",
+    "# Run this code and give temp = \"0.5\", i.e. as a string. Observe the output. \n",
+    "# Now rerun the code by changing `float` in the third line to `complex` and \n",
+    "#`int` and see what happens."
    ]
   },
   {
