--- a/03_basic_programming.ipynb
+++ b/03_basic_programming.ipynb
@@ -185,6 +185,283 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arithmetic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x =4\n",
+    "y = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Addition\n",
+    "x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Subtraction\n",
+    "x-y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiplication\n",
+    "x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Division\n",
+    "x/y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raising x to the power y\n",
+    "x**y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integer division\n",
+    "# As noted above, when we divide two integers, \n",
+    "# the result gets rounded down to its nearest integer.\n",
+    "x=14.\n",
+    "y=3\n",
+    "x//y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Modulo operator\n",
+    "x=15\n",
+    "y=4\n",
+    "x%y\n",
+    "\n",
+    "# This operator can be used to find for instance \n",
+    "# whether a number is even or odd."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combining mathematical operators\n",
+    "\n",
+    "`x + 2*y`    is equivalent to    $x + 2y$\n",
+    "\n",
+    "`x - y/2`    is equivalent to    $x - y/2$\n",
+    "\n",
+    "`3*x**2`    is equivalent to   $3*x^2$\n",
+    "\n",
+    "`x/2*y`    is equivalent to $\\frac{1}{2}x y$\n",
+    "\n",
+    "One can also use brackets to separate out operators. Eg:- Note the difference\n",
+    "\n",
+    "`x = a + b/c`\n",
+    "\n",
+    "`x = (a +b)/c`\n",
+    "\n",
+    "`x = a + 2*b - 0.5*(1.5**c + 2/7)`\n",
+    "\n",
+    "Also note that, operations are only allowed on right side, not on the left side. Eg:-\n",
+    "\n",
+    "`2*x = y`\n",
+    "\n",
+    "is not allowed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2*x = y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that \n",
+    "x = 1\n",
+    "# is an assignment, not an equation. \n",
+    "# One can also do\n",
+    "x = x + 1\n",
+    "print x\n",
+    "# Mathematically the above statement does not make much sense."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python modifiers\n",
+    "\n",
+    "`x+=1`    add 1 to x and assign it to x\n",
+    "\n",
+    "`x-=2`    subtract 2 from x and assign it to x\n",
+    "\n",
+    "`x *= -1.5' multipy x by -1.5 and assign it to x\n",
+    "\n",
+    "`x /= 3*x`  divide by $3\\times x$ and assign it to x\n",
+    "\n",
+    "'x //=1.4`    divide by 1.4 and round down to a whole number and assign it to x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 3\n",
+    "x += 2\n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing functions from packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "log(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import log\n",
+    "x = log(x)\n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import log10\n",
+    "x = 10\n",
+    "print log10(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`math` package will allow us to use many such functions:\n",
+    "\n",
+    "`log`, `log10`, `exp`, `sin`, `cos`, `tan`, `asin`, `acos`, `atan`, `sinh`, `cosh`, `tanh`, `sqrt`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It also gives you the value of pi\n",
+    "from math import pi\n",
+    "print pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want youcan import more than one function in single line\n",
+    "\n",
+    "`from math import log, sin, cos`\n",
+    "\n",
+    "will load three functions simultaneously. \n",
+    "There are many other useful packages. You can look up the package `numpy` ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modules\n",
+    "Sometimes, packages contain modules which contain a \n",
+    "particular set of functions. For instance, numpy contains \n",
+    "a linear algebra module which contains a lot of functions \n",
+    "such as inverse."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy.linalg as linalg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#linalg.inv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
