some discussions and exerises on numerical integration

--- a/05_integration.ipynb
+++ b/05_integration.ipynb
@@ -38,7 +38,7 @@
     "$$\\int_0^2 (x^4 -2 x + 1) d x = \\left[ \\frac{1}{5}x^5 - x^2 + x \\right]_0^2\\\\\n",
     " = 4.4$$\n",
     " \n",
-    " The error is only $(4.50656-4.4)/4.4 = 2.4%$. The error can be decreased by increasing step size. \n",
+    " The error is only $(4.50656-4.4)/4.4 = 2.4\\%$. The error can be decreased by increasing step size. \n",
     " \n",
     " Find out the error if $N=100$. What is the error if $N=1000$?\n",
     " \n",
@@ -171,7 +171,7 @@
     "\n",
     "The idea is that one can improve our estimate of the integral by adding the error estimate. For instance, in trapezoidal rule the error is\n",
     "$$\n",
-    "c h_i^2\\, =\\, \\frac{1}{3}\\, (I_i\\, -\\, I_{i-1}).\n",
+    "c_1 h_i^2\\, =\\, \\frac{1}{3}\\, (I_i\\, -\\, I_{i-1}).\n",
     "$$\n",
     "Since, the true value of integral is $I\\, =\\, I_i\\, + c_1\\,h_i^2 +\\, {\\cal O} (h_i^4)$, we can write our estimate as\n",
     "$$\n",
@@ -182,12 +182,12 @@
     "We can generalize this method. For this, define\n",
     "\n",
     "$$\n",
-    "R_i\\, =\\, I_i\\hspace{3cm} R_i,2\\, =\\, I_i\\, +\\, \\frac{1}{3}\\, (I_i\\, -\\, I_{i-1})\\, =\\, R_{i,1} + \\frac{1}{3} (R_{i,1} - R_{i-1,1}).\n",
+    "R_{i,1}\\, =\\, I_i\\hspace{3cm} R_i,2\\, =\\, I_i\\, +\\, \\frac{1}{3}\\, (I_i\\, -\\, I_{i-1})\\, =\\, R_{i,1} + \\frac{1}{3} (R_{i,1} - R_{i-1,1}).\n",
     "$$\n",
     "\n",
     "Then, I can write the integral as\n",
     "$$\n",
-    "I\\, =\\, R_{i,2}\\, +\\, c_2\\,h_i^4\\, {\\cal O}(h_i^6),\n",
+    "I\\, =\\, R_{i,2}\\, +\\, c_2\\,h_i^4\\,+\\, {\\cal O}(h_i^6),\n",
     "$$\n",
     "where $c_2$ is another constant. Comparing the above estimate with the previous step, we can write\n",
     "$$\n",
@@ -207,7 +207,7 @@
     "$$\n",
     "From the above two equations one could write\n",
     "$$\n",
-    "c_m\\, h_i^{2m}\\, \\frac{1}{4^m\\,-\\,1}\\, (R_{i,m} - R_{i-1,m})\n",
+    "c_m\\, h_i^{2m}\\,=\\, \\frac{1}{4^m\\,-\\,1}\\, (R_{i,m} - R_{i-1,m})\n",
     "$$\n",
     "then the integral estimate can be updated to\n",
     "$$\n",
